--- a/VM-GA-Tests/VM-GA-Tests.csproj
+++ b/VM-GA-Tests/VM-GA-Tests.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\VM-GA\GeneticAlgorithm.csproj" />
+    <ProjectReference Include="..\VirtualMachine\VirtualMachine.csproj" />
   </ItemGroup>
 
 </Project>
