lab 8 - AI WinGPU

--- a/VM-GA/GeneticAlgorithm.csproj
+++ b/VM-GA/GeneticAlgorithm.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>VM_GA</RootNamespace>
     <UseWindowsForms>true</UseWindowsForms>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
