--- a/OpenCVKitchen/OpenCVKitchen.csproj
+++ b/OpenCVKitchen/OpenCVKitchen.csproj
@@ -1,8 +1,22 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="Data\Text\haarcascade_frontalface_default.xml" />
+    <None Remove="Data\Text\lbpcascade_frontalface.xml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Data\Text\haarcascade_frontalface_default.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\Text\lbpcascade_frontalface.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="OpenCvSharp4.Windows" Version="4.5.0.20201013" />
